+ 添加头部界面

--- a/src/style/scss/_index.scss
+++ b/src/style/scss/_index.scss
@@ -1,7 +1,7 @@
 
-.header {
-  background: $gray;line-height: 2;color: $black;
-}
+// .header {
+//   background: $gray;line-height: 2;color: $black;
+// }
 
 
 .img_test {
